--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next": "^14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "g": "^2.0.1",
+    "pnpm": "^9.11.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.19",
